<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layoutDirection="locale"

    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.1">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/intro"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="Login And connect to your friends now !"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                app:errorTextAppearance="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_emailid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginBottom="10dp"
                android:background="@color/white_greyish" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                app:passwordToggleEnabled="true"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/password"
                    android:gravity="center_vertical"
                    android:hint="@string/passowrd"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />


            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/forgot"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="14sp" />


            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/loginbutton_selector"
                android:onClick="Login"
                android:padding="3dp"
                android:text="@string/login"
                android:textColor="@color/background_color"
                android:textSize="17sp"
                android:textStyle="bold" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="10dp"

    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/newUser1"
        android:textColor="@color/white"
        android:layout_marginRight="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/newUser2"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        />

</LinearLayout>


        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="Or"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toLeftOf="@id/tvText"
            android:background="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@id/tvText"
            android:background="@color/white" />
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1">

                <com.twitter.sdk.android.core.identity.TwitterLoginButton
                    android:id="@+id/twitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/fakeTwitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#45B0E3"
                    android:drawableLeft="@drawable/twitter"
                    android:drawablePadding="-45sp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="Log in with Twitter"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/fakeFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#3B5998"
                    android:drawableLeft="@drawable/facebook"
                    android:drawablePadding="-45sp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="Log in with Facebook"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/fakeGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#DD4B39"
                    android:drawableLeft="@drawable/googleplus"
                    android:drawablePadding="-45sp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="Log in with Google"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </FrameLayout>


        </LinearLayout>





</LinearLayout>
</ScrollView>
